force-app/main/default/objects/Delivery__c/fields/Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner__c</fullName>
    <label>Delivery Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>