force-app/main/default/objects/Delivery__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>